build_errors.txt
warning: simple-image-viewer@0.9.9: icon.ico generated from icon.png
warning: use of deprecated type alias `image::io::Reader`: this type has been moved and renamed to image::ImageReader
 --> src\bin\make_trans.rs:5:26
  |
5 |     let img = image::io::Reader::open(src).unwrap().with_guessed_format().unwrap().decode().unwrap();
  |                          ^^^^^^
  |
  = note: `#[warn(deprecated)]` on by default

    Checking simple-image-viewer v0.9.9 (F:\Rust\SimpleImageViewer)
warning: `simple-image-viewer` (bin "make_trans") generated 1 warning
warning: unused import: `HashSet`
 --> src\loader.rs:1:33
  |
1 | use std::collections::{HashMap, HashSet};
  |                                 ^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `self`
  --> src\psb_reader.rs:14:15
   |
14 | use std::io::{self, BufReader, Read, Seek, SeekFrom};
   |               ^^^^

warning: use of deprecated type alias `egui::TopBottomPanel`: Use Panel::top or Panel::bottom instead
    --> src\app.rs:2776:31
     |
2776 |                         egui::TopBottomPanel::bottom("exif_footer")
     |                               ^^^^^^^^^^^^^^
     |
     = note: `#[warn(deprecated)]` on by default

warning: use of deprecated type alias `egui::TopBottomPanel`: Use Panel::top or Panel::bottom instead
    --> src\app.rs:2837:31
     |
2837 |                         egui::TopBottomPanel::bottom("xmp_footer")
     |                               ^^^^^^^^^^^^^^

warning: use of deprecated method `egui::Context::screen_rect`: screen_rect has been split into viewport_rect() and content_rect(). You likely should use content_rect()
   --> src\app.rs:576:47
    |
576 |                         let screen_size = ctx.screen_rect().size();
    |                                               ^^^^^^^^^^^

warning: use of deprecated method `egui::Context::wants_pointer_input`: Renamed to egui_wants_pointer_input
   --> src\app.rs:870:79
    |
870 |         let ui_consuming_scroll = any_modal_open || self.show_settings || ctx.wants_pointer_input();
    |                                                                               ^^^^^^^^^^^^^^^^^^^

error[E0425]: cannot find function `styled_button_widget` in this scope
    --> src\app.rs:1334:67
     |
1334 | ...                   let resp = ui.add_enabled(has_tracks, styled_button_widget("鈴?));
     |                                                             ^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `styled_button_widget` in this scope
    --> src\app.rs:1353:67
     |
1353 | ...                   let resp = ui.add_enabled(has_tracks, styled_button_widget("鈴?));
     |                                                             ^^^^^^^^^^^^^^^^^^^^ not found in this scope

warning: use of deprecated method `egui::Context::screen_rect`: screen_rect has been split into viewport_rect() and content_rect(). You likely should use content_rect()
    --> src\app.rs:2418:31
     |
2418 |         let screen_rect = ctx.screen_rect();
     |                               ^^^^^^^^^^^

warning: use of deprecated method `egui::Context::screen_rect`: screen_rect has been split into viewport_rect() and content_rect(). You likely should use content_rect()
    --> src\app.rs:2771:34
     |
2771 |                 .default_pos(ctx.screen_rect().center() - egui::vec2(210.0, 240.0))
     |                                  ^^^^^^^^^^^

warning: use of deprecated method `egui::Context::screen_rect`: screen_rect has been split into viewport_rect() and content_rect(). You likely should use content_rect()
    --> src\app.rs:2833:34
     |
2833 |                 .default_pos(ctx.screen_rect().center() - egui::vec2(320.0, 240.0))
     |                                  ^^^^^^^^^^^

error[E0425]: cannot find function `set_error` in this scope
   --> src\audio.rs:326:13
    |
326 |             set_error(&err_slot, msg);
    |             ^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `set_current_track` in this scope
   --> src\audio.rs:351:17
    |
205 | fn set_current_path(slot: &Arc<Mutex<Option<PathBuf>>>, path: Option<PathBuf>) {
    | ------------------------------------------------------------------------------ similarly named function `set_current_path` defined here
...
351 |                 set_current_track(&track_slot, None);
    |                 ^^^^^^^^^^^^^^^^^
    |
help: a function with a similar name exists
    |
351 -                 set_current_track(&track_slot, None);
351 +                 set_current_path(&track_slot, None);
    |

error[E0425]: cannot find function `set_current_track` in this scope
   --> src\audio.rs:359:17
    |
205 | fn set_current_path(slot: &Arc<Mutex<Option<PathBuf>>>, path: Option<PathBuf>) {
    | ------------------------------------------------------------------------------ similarly named function `set_current_path` defined here
...
359 |                 set_current_track(&track_slot, None);
    |                 ^^^^^^^^^^^^^^^^^
    |
help: a function with a similar name exists
    |
359 -                 set_current_track(&track_slot, None);
359 +                 set_current_path(&track_slot, None);
    |

error[E0425]: cannot find function `set_current_track` in this scope
   --> src\audio.rs:469:17
    |
205 | fn set_current_path(slot: &Arc<Mutex<Option<PathBuf>>>, path: Option<PathBuf>) {
    | ------------------------------------------------------------------------------ similarly named function `set_current_path` defined here
...
469 |                 set_current_track(&track_slot, None);
    |                 ^^^^^^^^^^^^^^^^^
    |
help: a function with a similar name exists
    |
469 -                 set_current_track(&track_slot, None);
469 +                 set_current_path(&track_slot, None);
    |

error[E0425]: cannot find function `set_current_track` in this scope
   --> src\audio.rs:493:21
    |
205 | fn set_current_path(slot: &Arc<Mutex<Option<PathBuf>>>, path: Option<PathBuf>) {
    | ------------------------------------------------------------------------------ similarly named function `set_current_path` defined here
...
493 |                     set_current_track(&track_slot, Some(filename));
    |                     ^^^^^^^^^^^^^^^^^
    |
help: a function with a similar name exists
    |
493 -                     set_current_track(&track_slot, Some(filename));
493 +                     set_current_path(&track_slot, Some(filename));
    |

warning: variable does not need to be mutable
   --> src\audio.rs:262:25
    |
262 |             if let Some(mut t) = current_track.take() {
    |                         ----^
    |                         |
    |                         help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `num_channels`
  --> src\psb_reader.rs:84:9
   |
84 |     let num_channels = channels.min(4); // We only care about up to 4 channels (RGBA)
   |         ^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_num_channels`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0425`.
warning: `simple-image-viewer` (bin "SimpleImageViewer") generated 11 warnings
warning: simple-image-viewer@0.9.9: icon.ico generated from icon.png
error: could not compile `simple-image-viewer` (bin "SimpleImageViewer") due to 7 previous errors; 11 warnings emitted
